# deskcustom

./: .gitignore  Cargo.toml  deskcustom.example.toml
.github/workflows/: build-windows.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  update.rs
apps/desktop/ui/: app.js  index.html  styles.css
crates/deskcustom-cli/: Cargo.toml
crates/deskcustom-cli/src/: main.rs
crates/deskcustom-config/: Cargo.toml
crates/deskcustom-config/src/: lib.rs
crates/deskcustom-core/: Cargo.toml
crates/deskcustom-core/src/: client.rs  clipboard.rs  debug.rs  keyboard.rs  lib.rs  mouse.rs  netbind.rs  netutil.rs  runtime.rs  server.rs  tcp.rs
crates/deskcustom-platform/: Cargo.toml
crates/deskcustom-platform/src/: clipboard.rs  inject.rs  lib.rs  macos.rs  traits.rs  windows.rs
crates/deskcustom-proto/: Cargo.toml
crates/deskcustom-proto/src/: lib.rs
scripts/: build-windows-fast.ps1  build-windows.ps1  github-first-push.sh  latest.example.json  local-update-server.ps1  local-update-server.py
