[workspace]
resolver = "2"
members = [
    "crates/deskcustom-proto",
    "crates/deskcustom-config",
    "crates/deskcustom-core",
    "crates/deskcustom-platform",
    "crates/deskcustom-cli",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["deskcustom"]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

deskcustom-proto = { path = "crates/deskcustom-proto" }
deskcustom-config = { path = "crates/deskcustom-config" }
deskcustom-core = { path = "crates/deskcustom-core" }
deskcustom-platform = { path = "crates/deskcustom-platform" }
