[package]
name = "deskcustom"
version.workspace = true
edition.workspace = true

[[bin]]
name = "deskcustom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
deskcustom-config.workspace = true
deskcustom-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
