[package]
name = "deskcustom-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
deskcustom-config.workspace = true
deskcustom-proto.workspace = true
deskcustom-platform.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
